Split data request to /data/list and /data/{uuid} Removed AuthenticatedDataApp and keys are now handled by Backend. Adding user authentication is now optional (use AddUsers). Implemented DefaultDataApp Added data to stupid-server
